--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A website used for tracking tasks" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Torque Tasks</title>
+    <title>Tuesday</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
