Pre ject Co-authored-by: Omar Afzal <theengineermachine@gmail.com>

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="A website used for tracking tasks" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Tuesday</title>
+    <title>Torque Task</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
